# net-sentry

./: .gitignore  .lighthouserc.json  Dockerfile  README.md  config.yaml.example  docker-compose.windows.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  oui-update.yml  publish-docker.yml  publish-pypi.yml
alembic/: env.py
alembic/versions/: 002_reconnect_count.py  003_port_scan_network_segment.py
docs/: architecture.md  database-migrations.md
grafana/provisioning/dashboards/: btwifi.json  net-sentry.json  provider.yaml
prometheus/: prometheus.yml
scripts/: update_oui_db.py
src/: __init__.py  alert.py  api.py  auth.py  bluetooth_scanner.py  config.py  database.py  device_tracker.py  dhcp_scanner.py  fingerprint.py  home_assistant.py  ipv6_scanner.py  logging_setup.py  mac_merge.py  main.py  mdns_scanner.py  metrics.py  models.py  monitor_scanner.py  mqtt_publisher.py  netbios_scanner.py  network_discovery.py  oui_lookup.py  port_scanner.py  scanner_plugin.py  snmp_scanner.py  ssdp_scanner.py  tracing.py  whitelist.py  wifi_scanner.py
src/data/: oui.csv
src/templates/: dashboard.html  device_detail.html  device_timeline.html  devices_table.html  windows_table.html
tests/: conftest.py  test_alert.py  test_api.py  test_api_integration.py  test_auth.py  test_bulk_upsert.py  test_config.py  test_database.py  test_database_integration.py  test_database_retention.py  test_device_tracker.py  test_docker_compose_integration.py  test_entrypoint.py  test_fingerprint.py  test_home_assistant.py  test_ipv6_privacy.py  test_ipv6_scanner.py  test_logging_setup.py  test_mac_merge.py  test_main.py  test_metrics.py  test_monitor_scanner.py  test_mqtt_publisher.py  test_network_discovery.py  test_network_discovery_subprocess.py  test_oui_lookup.py  test_port_scanner.py  test_scanner_plugin_contract.py  test_snmp_scanner.py  test_timeline_and_merge_api.py  test_tracing.py  test_whitelist.py  test_wifi_scanner.py
tests/e2e/: test_dashboard_e2e.py
