[project]
name = "btwifi"
version = "0.1.0"
description = "Track WiFi and Bluetooth device visibility over time"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Private"}

dependencies = [
    "sqlalchemy>=2.0",
    "mac-vendor-lookup>=0.1.12",
    "aiohttp>=3.13.5",
    "zeroconf>=0.131.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "alembic>=1.15.0",
    "prometheus-client>=0.21.0",
    "paho-mqtt>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "types-tabulate>=0.9",
    "httpx>=0.27.0",
]
monitor = [
    "scapy>=2.5",
]

[project.scripts]
btwifi = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --timeout=30"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/api.py" = ["B008"]  # FastAPI Depends() in default args is standard pattern

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 81
show_missing = true
