[project]
name = "net-sentry"
version = "0.1.0"
description = "Net Sentry — Track WiFi, Bluetooth, and network device visibility over time"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "sqlalchemy>=2.0",
    "mac-vendor-lookup>=0.1.12",
    "aiohttp>=3.13.5",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "alembic>=1.15.0",
    "prometheus-client>=0.21.0",
    "paho-mqtt>=2.1.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0",
    "bleak>=0.22.3",
    "pysnmp-lextudio>=6.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1,<5.0",
    "pytest-timeout>=2.3",
    "ruff==0.15.5",
    "mypy==1.19.1",
    "types-pyyaml>=6.0",
    "types-tabulate>=0.9",
    "httpx>=0.27.0",
    "bandit>=1.7",
    "pre-commit>=3.7",
    # Integration tests (TestContainers)
    "testcontainers[postgres]>=4.8.0",
    "pg8000>=1.31.0",
    "docker>=7.0.0",
    # E2E tests (Playwright — Apache 2.0)
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
]
monitor = [
    "scapy>=2.5",
]

[project.scripts]
net-sentry = "src.main:main"
# Keep btwifi alias for backwards compat during transition
btwifi = "src.main:main"

# Entry-point group for third-party scanner plugins.
# Third-party packages can register a ScannerPlugin subclass here.
# Example:  my_scanner = "my_package.my_scanner:MyScanner"
[project.entry-points."net_sentry.scanners"]
snmp = "src.snmp_scanner:SnmpScanner"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --timeout=30"
markers = [
    "integration: integration tests requiring Docker (deselect with -m 'not integration')",
    "e2e: end-to-end browser tests requiring Playwright (deselect with -m 'not e2e')",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/api.py" = ["B008"]  # FastAPI Depends() in default args is standard pattern

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 81
show_missing = true
